--- a/materiales/templates/materiales/formularios_altas/alta_varios.html
+++ b/materiales/templates/materiales/formularios_altas/alta_varios.html
@@ -6,7 +6,7 @@
     
     <div class="row mb-3">
         <div class="col-md-3">
-            <label for="sede" style="font-size: 14px;">Sede: <span class="text-danger">*</span></label>
+            <label for="sede-varios" style="font-size: 14px;">Sede: <span class="text-danger">*</span></label>
             <select class="form-control form-control-sm" id="sede-varios" name="sede_varios" required>
                 <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
