--- a/materiales/templates/materiales/formularios_altas/alta_proyector.html
+++ b/materiales/templates/materiales/formularios_altas/alta_proyector.html
@@ -40,3 +40,6 @@
 <script src="{% static 'js/alertas.js' %}"></script>
 <script src="{% static 'js/form_altas.js' %}"></script>
 
+<!-- Inclusión del modal para vaciar campos -->
+{% include 'modals/alertas/vaciar_campos.html' %}
+
