--- a/materiales/templates/modals/alertas/vaciar_campos.html
+++ b/materiales/templates/modals/alertas/vaciar_campos.html
@@ -36,7 +36,8 @@ DE GUARDAR EL PROGRESO
     min-width: 300px;
     padding: 0.8em 0.8em;
     text-align: center;
-    background: #FFB3BA;
+    background-color: #FFC0CB !important;
+    background: #FFC0CB !important;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     border: 2px solid #FF0000;
 }
